<resources>
    <string name="app_name">HDR Camera</string>
    <string name="files_title">Select a HDR File for Editing</string>
    <string name="tmo_durand">Durand Local TMO</string>
    <string name="tmo_reinhard">Reinhard Global TMO</string>
    <string name="tmo_mantiuk">Mantiuk Local TMO</string>
    <string name="tmo_drago">Drago Global TMO</string>
    <string name="tmo_gamma">Gamma</string>
    <string name="tmo_intensity">Intensity</string>
    <string name="tmo_light_adaptation">Light Adaptation</string>
    <string name="tmo_color_adaptation">Color Adaptation</string>
    <string name="tmo_scale">Scale</string>
    <string name="tmo_saturation">Saturation</string>
    <string name="tmo_contrast">Contrast</string>
    <string name="tmo_sigma_space">Sigma Space</string>
    <string name="tmo_sigma_color">Sigma Color</string>
    <string name="tmo_bias">Bias</string>
    <string name="settings_exposures">Number of exposures</string>
    <string name="settings_steps">Step size</string>
</resources>